Integrate react helmet for metadata

--- a/remigellagroup/index.html
+++ b/remigellagroup/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src//assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>remigellagroup</title>
+    <meta
+      name="description"
+      content="Established in 1993 as Remigella Interlink and Associates Nigeria Limited, we've grown into one of Africa's most progressive business conglomerates."
+    />
+    <meta
+      name="keywords"
+      content="remigellagroup, ohamadike, foundation, africa, nigeria, interlink, football club, ohamadike football club, ohamdike foundation, remigella international group"
+    />
+    <meta name="author" content="Oluwafemi Joseph Faleye" />
+    <title>Remigellagroup</title>
   </head>
   <body>
     <div id="root"></div>
